--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/evaklimentova/smallRNA_binding/main/Webpage/style.css">
     <!script src="http://wzrd.in/bundle/biojs-io-fasta@latest"></script>
 </head>
 
@@ -66,7 +66,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
-    <script src="script.js"></script>
+    <script src="https://raw.githubusercontent.com/evaklimentova/smallRNA_binding/main/Webpage/script.js"></script>
 
 </body>
 
