--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<meta charset="utf-8" />
+<meta charset="utf-8"/>
 
 <head>
     <TITLE>smallRNA binding</TITLE>
@@ -9,34 +9,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/smallRNA_binding/Webpage/style.css">
-    <!script src="http://wzrd.in/bundle/biojs-io-fasta@latest"></script>
+    <!--<link rel="stylesheet" href="style.css">-->
 </head>
 
 <body>
 
 
-
-<div class="bar buttons menu">
-    <button style="width:50%" class="bar-button button1 selected" id="miRNATab" onclick="openTab('miRNA')">miRNA</button>
-    <button style="width:50%" class="bar-button button1" id="tRNATab" onclick="openTab('tRNA')">tRNA</button>
+<div>
+    <div id="menuItems" class="menuItems">
+        <div class="menuItem" onclick="openTab('miRNA', 0)">miRNA</div>
+        <div class="menuItem" onclick="openTab('tRNA', 1)">tRNA</div>
+    </div>
+    <div id="navTool" class="navTool"></div>
 </div>
 
 <div class="body">
     <div id="miRNA" class="bar tab" style="">
         <form method="post" enctype="multipart/form-data">
             <h4><strong>miRNA - target binding prediction tool</strong></h4>
-            <br /><br />
+            <br/><br/>
             <p>Insert miRNA (20 nt) sequences here (line separated)</p>
 
-            <div><textarea name="smallRNA" id="smallRNA" style="width:70%;height:100px;" placeholder="Paste miRNA sequences" required></textarea></div>
-            <br />
+            <div><textarea name="smallRNA" id="smallRNA" style="width:70%;height:100px;"
+                           placeholder="Paste miRNA sequences" required></textarea></div>
+            <br/>
             <p>Insert target mRNA sequences (50 nt) here (line separated)</p>
-            <div><textarea name="target" id="target" style="width:70%;height:100px;" placeholder="Paste mRNA sequences" required></textarea></div><br />
+            <div><textarea name="target" id="target" style="width:70%;height:100px;" placeholder="Paste mRNA sequences"
+                           required></textarea></div>
+            <br/>
 
-            <button type="button" value="Load example" name="example" onclick="loadExample('miRNA')">Load example</button><input type="reset" value="Reset" name="reset"><button type="button" value="Submit" name="submit" onclick="makePrediction('miRNA')">Submit</button>
+            <button class="button" type="button" value="Load example" name="example" onclick="loadExample('miRNA')">Load example
+            </button>
+            <input class="button" type="reset" value="Reset" name="reset">
+            <button class="button" type="button" value="Submit" name="submit" onclick="makePrediction('miRNA')">Submit</button>
             <br/><br/>
-            <div class="warning" id="warning"></div><br/>
-            <div class="result" id="result"></div><br/>
+            <div class="warning" id="warning"></div>
+            <br/>
+            <div class="result" id="result"></div>
+            <br/>
         </form>
     </div>
 
@@ -44,29 +54,38 @@
     <div id="tRNA" class="bar tab" style="display: none">
         <form method="post" enctype="multipart/form-data">
             <h4><strong>tRNA - target binding prediction tool</strong></h4>
-            <br /><br />
+            <br/><br/>
             <p>Insert tRNA (20 nt) sequences here (line separated)</p>
 
-            <div><textarea name="smallRNA" id="smallRNA" style="width:70%;height:100px;" placeholder="Paste tRNA sequences" required></textarea></div>
-            <br />
+            <div><textarea name="smallRNA" id="smallRNA" style="width:70%;height:100px;"
+                           placeholder="Paste tRNA sequences" required></textarea></div>
+            <br/>
             <p>Insert target mRNA sequences (50 nt) here (line separated)</p>
-            <div><textarea name="target" id="target" style="width:70%;height:100px;" placeholder="Paste mRNA sequences" required></textarea></div><br />
+            <div><textarea name="target" id="target" style="width:70%;height:100px;" placeholder="Paste mRNA sequences"
+                           required></textarea></div>
+            <br/>
 
-            <button type="button" value="Load example" name="example2" onclick="loadExample('tRNA')">Load example</button><input type="reset" value="Reset" name="reset"><button type="button" value="Submit" name="submit" onclick="makePrediction('tRNA')">Submit</button>
+            <button class="button" type="button" value="Load example" name="example2" onclick="loadExample('tRNA')">Load example
+            </button>
+            <input class="button" type="reset" value="Reset" name="reset">
+            <button class="button" type="button" value="Submit" name="submit" onclick="makePrediction('tRNA')">Submit</button>
             <br/><br/>
-            <div class="warning" id="warning"></div><br/>
-            <div class="result" id="result"></div><br/>
+            <div class="warning" id="warning"></div>
+            <br/>
+            <div class="result" id="result"></div>
+            <br/>
         </form>
     </div>
 </div>
 
 <footer id="footer-2-cols" class="site-footer">
-        For more information see <a href="https://github.com/evaklimentova/smallRNA_binding">https://github.com/evaklimentova/smallRNA_binding</a>
+    For more information see <a href="https://github.com/evaklimentova/smallRNA_binding">https://github.com/evaklimentova/smallRNA_binding</a>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
-    <script src="/smallRNA_binding/Webpage/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
+<script src="/smallRNA_binding/Webpage/script.js"></script>
+<!--<script src="script.js"></script>-->
 
 </body>
 
